# swim

./: .travis.yml  LICENSE  Makefile  README.md  stack.yaml  swim.cabal
app/: Main.hs
src/: Core.hs  FailureDetector.hs  Types.hs  Util.hs  Wire.hs
test/: Spec.hs
